hero section added

--- a/style.css
+++ b/style.css
@@ -10,3 +10,43 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+.orange-text{
+    color: #FBA24F;
+}
+.btn{
+    text-decoration: none;
+    padding: 15px 30px;
+    background-color: black;
+    color: whitesmoke;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, #FBA24F, #FF1E1E);
+}
+/* hero-section styles */
+#hero-section{
+    width: 100%;
+    height: 600px;
+}
+.hero-container{
+    display: flex;
+    align-items: center;
+    margin: 0 100px;
+}
+.hero-text{
+    width: 50%;
+}
+.hero-text > h1{
+    font-size: 60px;
+    color: #575757;
+    margin-bottom: 40px;
+}
+.hero-text > p{
+    font-size: 20px;
+    color: #828282;
+    margin-bottom: 40px;
+}
+.hero-image{
+    width: 50%;
+}
+.hero-image > img{
+    width: 100%;
+}
