about section added

--- a/style.css
+++ b/style.css
@@ -50,3 +50,35 @@ body{
 .hero-image > img{
     width: 100%;
 }
+/* about-section styles */
+#about-section{
+    width: 100%;
+    height: 600px;
+    background-image: url('./images/shapes/7.png');
+}
+.about-container{
+    display: flex;
+    justify-content: center;
+}
+.about-image{
+    width: 35%;
+    position: relative;
+}
+.about-image > img{
+    width: 338px;
+    height: 536px;
+    position: absolute;
+    bottom: -145px;
+}
+.about-text{
+    width: 35%;
+    margin-top: 200px;
+}
+.about-text > h3{
+    font-size: 40px;
+    color: #707070;
+    margin-bottom: 45px;
+}
+.about-text > p{
+    margin-bottom: 45px;
+}
