--- a/style.css
+++ b/style.css
@@ -82,3 +82,49 @@ body{
 .about-text > p{
     margin-bottom: 45px;
 }
+
+/* recipie-section styles */
+#recipie-section{
+    padding: 72px 100px;
+    text-align: center;
+}
+.recipie-title{
+    font-size: 36px;
+    font-weight: 700;
+    font-style: bold;
+    color: #676767;
+    margin-bottom: 30px;
+}
+.recipie-description{
+    color: #252525;
+    font-size: 18px;
+    line-height: 25px;
+}
+.recipies-container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+.item-card{
+    width: 600px;
+    height: 525px;
+    border-radius: 30px;
+    padding: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.item-image > img{
+    width: 550px;
+    height: 308px;
+    border-radius: 20px;
+}
+.item-text{
+    text-align: start;
+    margin-top: 30px;
+    width: 535px;
+    height: 140px;
+}
+.item-text > h3{
+    font-size: 28px;
+    color: #18191F;
+    margin-bottom: 10px;
+}
